<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Form Application</string>
    <string name="form_title">Registration Form</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="birth_date">Birth Date</string>
    <string name="select_image">Select Image</string>
    <string name="submit">Submit</string>
    <string name="display_info">Display Information</string>
    <string name="menu_settings">Language</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="context_edit">Edit</string>
    <string name="context_delete">Delete</string>
    <string name="context_copy">Copy</string>
    <string name="error_field_required">This field is required</string>
    <string name="language">Language</string>
    <string name="clear">clear</string>
</resources>